<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/give_name"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginEnd="10dp"/>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/give_username"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginEnd="10dp"/>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/give_email"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginEnd="10dp"/>-->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/give_cnp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginEnd="10dp"/>-->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/give_dob"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginEnd="10dp"/>-->
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dob"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/cnp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cnp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:visibility="visible" />


</LinearLayout>
